--- a/public/html/detail.html
+++ b/public/html/detail.html
@@ -10,16 +10,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/groupList.css">
     <link rel="stylesheet" href="../css/detail.css">
+    <link rel="stylesheet" media = "screen and (max-width: 870px)" href="../css/addGroupPhone.css">
+    <link rel="stylesheet" media = "screen and (max-width: 870px)" href="../css/addGroup1.css">
+    <link rel = "stylesheet" media = "screen and (max-width: 870px)" href="../css/detailPhone.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <!-- Navbar section -->
     <nav class="navbar navbar-expand-custom navbar-mainbg">
         <img class="navbar-brand navbar-logo" src="../images/logo.png" width="120" height="100">
 
         <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; height: 2.5rem;">
-<i class="fas fa-bars text-white"></i>
-</button>
+            <i class="fas fa-bars text-white"></i>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <div class="hori-selector">
@@ -44,50 +50,75 @@
             </ul>
         </div>
     </nav>
-    <br><br>
+   <!-- End of Navbar section -->
 
-    <form class="example" action="/addgroup.html" method="post">
-        <input type="text" placeholder="Search members.." name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
-    <div class="vl"></div>
-    <button type="button" class="btn btn-info" style="margin-top: 5px;position:relative; left:11rem; top:2px">Add</button>
-
-    <div style=" left:11rem; top:2px; float:right">
-        <h1 style="padding-left: 28rem;">Project Group</h1>
-        <br>
-        <div class="btn-group" style="padding-left: 5rem;">
-            <button type="button" class="btn btn-info">Settle Up</button>
-            <button type="button" class="btn btn-info">Balance</button>
-            <button type="button" class="btn btn-info"><a href="../html/addExpense.html" style="text-decoration: none; color:white">Add Expenses</a></button>
+    <!-- Group name section -->
+        <div id = "GroupTitle">
+            <h2>Project Group</h2>
+                <a href = "../html/addGroup1.html"><button id = "add_members" onclick="AddFunction()"><i class="fa fa-user-plus"></i></button></a>
         </div>
-        <br>
-        <br>
+    <!-- End of Group name section -->
 
-        <div class="table-responsive table-hover">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>List of Expenses</th>
-                        <th>Amount</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Super Market</td>
-                        <td>5000</td>
-                    </tr>
-                    <tr>
-                        <td>Lunch</td>
-                        <td>600</td>
-                    </tr>
-                    <tr>
-                        <td>Dinner</td>
-                        <td>1200</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <!-- Page content container -->
+    <div id = "container_d">
+        <!-- Expenses section -->
+        <section id = "Expenses">
+            <div id = "Action_btns" class="btn-group">
+                <button>Settle Up</button>
+                <button>Balance</button>
+                <button><a href="../html/addExpense.html" style="text-decoration: none; color:white">Add Expenses</a></button>
+            </div>
+            <div id = "Exp_table" class="table-responsive table-hover">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>List of Expenses</th>
+                            <th>Amount</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Super Market</td>
+                            <td>5000</td>
+                        </tr>
+                        <tr>
+                            <td>Lunch</td>
+                            <td>600</td>
+                        </tr>
+                        <tr>
+                            <td>Dinner</td>
+                            <td>1200</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <!-- End of Expenses section -->
+
+        <!-- Search and add member section -->
+        <section id = "SearchM">
+            <div id = "SearchBar">
+                <form class="example" action="/addgroup.html" method="post">
+                    <input id = "search_ip" type="text" placeholder="Search members.." name="search">
+                    <button id = "searchBtn" type="submit"><i id = "searchIcon" class="fa fa-search"></i></button>
+                </form>
+                <div id = "addBtn">
+                    <button type="button" class="btn btn-info" >Add</button>
+                </div>
+                <!-- <div id = "Contd">
+                    <a href="../html/addGrpPh2.html"><button type="button" class="btn btn-info">Continue</button></a>
+                </div> -->
+                <!-- <div id = "Cancel">
+                    <a href="../html/groupList.html"><button type="button" class="btn btn-info">Cancel</button></a>
+                </div> -->
+            </div>
+        </section>
+        <!-- End of search and add member section -->
+   </div>
+   <!-- End of Page content container -->
+    
+
+    
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
