--- a/public/html/detail.html
+++ b/public/html/detail.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="../css/groupList.css">
     <link rel="stylesheet" href="../css/detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Include Twitter Bootstrap and jQuery: -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+    <!-- Include the plugin's CSS and JS: -->
+    <script type="text/javascript" src="js/bootstrap-multiselect.js"></script>
+    <link rel="stylesheet" href="css/bootstrap-multiselect.css" type="text/css" />
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -29,7 +40,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../html/groupList.html"><i class="bi bi-people"></i> Group List</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
                 </li>
                 <li class="nav-item">
@@ -47,7 +58,20 @@
     <br><br>
 
     <form class="example" action="/addgroup.html" method="post">
-        <input type="text" placeholder="Search members.." name="search">
+        <!-- <div>
+            <input type="text" placeholder="Search members.." name="search">
+        </div> -->
+
+        <!-- Build your select: -->
+        <select id="example-getting-started" multiple="multiple">
+    <option value="cheese">Cheese</option>
+    <option value="tomatoes">Tomatoes</option>
+    <option value="mozarella">Mozzarella</option>
+    <option value="mushrooms">Mushrooms</option>
+    <option value="pepperoni">Pepperoni</option>
+    <option value="onions">Onions</option>
+</select>
+
         <button type="submit"><i class="fa fa-search"></i></button>
     </form>
     <div class="vl"></div>
@@ -100,6 +124,12 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="../js/navbar.js"></script>
 
+        <!-- Initialize the plugin: -->
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('#example-getting-started').multiselect();
+            });
+        </script>
 
 </body>
 
